<resources>
    <string name="app_name">Runnzzer</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="start">START</string>
    <string name="_00">00</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="duration">Duration</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="map">Map</string>
    <string name="live_data">Live Data</string>
    <string name="view_statistics">View Statistics</string>
    <string name="max_elevation">Max Ele</string>
    <string name="max_speed">Max Speed</string>
    <string name="avg_speed">Avg.Speed</string>
    <string name="pace">Pace</string>
    <string name="style">Style</string>
    <string name="audio">Audio</string>
    <string name="unites">Unites</string>
    <string name="feedback_rate">FeedBack Rate</string>
    <string name="state">State</string>
    <string name="map_style">Map Style</string>
    <string name="select_feedback_rate">Select FeedBack Rate</string>
    <string name="set">Set</string>
    <string name="speed">Speed</string>
    <string name="elevation">Elevation</string>

    <string name="km">km</string>
    <string name="ft">ft</string>
    <string name="meter">mt</string>
    <string name="mph">mph</string>
    <string name="kmh">kmh</string>
    <string name="mi">mi</string>
    <string name="kg">kg</string>
    <string name="pd">pd</string>


    <string name="cal">cal</string>
    <string name="select_map_style">Select Map Style</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_big">DELETE</string>
    <string name="delete_dialog_title">Do you want to delete this session !</string>
    <string name="edit_session">Edit Session</string>
    <string name="name">Name</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="imp">imp</string>
    <string name="met">met</string>
    <string name="select_height">Select Height</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="select_weight">select weight</string>

    <string name="age">Age</string>
    <string name="go">GO</string>
    <string name="total_runs">Total Runs</string>
    <string name="see_analytics">See Analytics</string>
    <string name="select_distance">Select Distance</string>
    <string name="save">Save</string>
    <string name="overview">Overview</string>
    <string name="done">Done</string>
    <string name="select_time">Select Time</string>
    <string name="profile">Profile</string>
    <string name="click_to_chose_image">click to chose image</string>
    <string name="add_session">Add Session</string>
    <string name="title_activity_maps">Map</string>
    <string name="preview">Preview</string>
    <string name="display">Display</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="add_new">Add New</string>
    <string name="cm">cm</string>
    <string name="select_your_name">Select Your Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="click_to_select_image">Click To Select Image</string>
    <string name="date">Date</string>
    <string name="record">Record</string>
    <string name="manually">Manually</string>


    <!--Map Styles-->
    <string name="nor">Normal</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
